# planning_poker_table

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  convert.py  convert.sh  eb_build.sh
elasticbeanstalk/gnu/: Dockerfile  Dockerrun.aws.json
elasticbeanstalk/musl/: Dockerfile
elasticbeanstalk/musl/.ebextensions/: log_publish.conf
resource/: index.html  not_found.html  table.html
resource/css/: planning_poker.css
resource/js/: index.js  planning_poker.js
src/: entity.rs  main.rs  page.rs  resource.rs  web_socket_session.rs
src/entity/: id.rs  player.rs  room.rs  room_status.rs  statistics.rs  table.rs  table_status.rs
src/page/: attend_html.rs  room_html.rs
src/resource/: css.rs  index.rs  js.rs  not_found.rs  table.rs
src/resource/css/: planning_poker.rs
src/resource/js/: index.rs  planning_poker.rs
