[package]
name = "planning_poker"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
derive-new = "0.5.9"
anyhow = "1.0.44"
thiserror = "1.0.30"
md-5 = "0.9.1"
base64-url = "1.4.10"
rand = "0.7.3"
sha2 = "0.9.8"
serde = "1.0.130"
serde_json = "1.0.68"
url = "2.2.2"
chrono = "0.4.19"

actix = "0.10"
actix-codec = "0.3"
actix-http = "2.2.1"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
futures = "0.3.1"
bytes = "0.5.3"
