[package]
name = "planning_poker"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
derive-new = "0.5.9"
anyhow = "1.0.62"
thiserror = "1.0.31"
md-5 = "0.10.1"
base64-url = "1.4.13"
rand = "0.8.5"
sha2 = "0.10.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
url = "2.2.2"
chrono = "0.4.22"
once_cell = "1.13.1"

actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.2.1"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"
awc = "3.0.0"
futures = "0.3.21"
bytes = "1.2.1"

regex = "1.6.0"
tokio = "1.20.1"
miow = "0.4.0"
crossbeam-utils = "0.8.11"
