[package]
name = "planning_poker"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.3.0"
derive-new = "0.6.0"
anyhow = "1.0.79"
thiserror = "1.0.57"
md-5 = "0.10.1"
base64-url = "2.0.2"
rand = "0.8.5"
sha2 = "0.10.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
url = "2.5.0"
chrono = "0.4.34"
once_cell = "1.19.0"
mio = "0.8.11"

actix = "0.13.3"
actix-codec = "0.5.2"
actix-http = "3.6.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-files = "0.6.5"
awc = "3.4.0"
futures = "0.3.30"
bytes = "1.5.0"

regex = "1.10.3"
tokio = "1.36.0"
miow = "0.6.0"
crossbeam-utils = "0.8.19"
